ecmascript/parser/tests/jsx/errors/issue-387-4/input.js.stderr
error: TS1005
 --> $DIR/tests/jsx/errors/issue-387-4/input.js:1:12
  |
1 | var a = {b = 1};
  |            ^

